--- a/talk.tex
+++ b/talk.tex
@@ -166,7 +166,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Fixed-order calculation}
+\begin{frame}{Fixed-order calculation (\texttt{NUHMSSMNoFVHimalaya})}
   \emph{Input:} $\aem(M_Z)$, $\as(M_Z)$, $G_F$, $M_Z$, $M_t$, $m_b(m_b)$,\\
   SUSY parameters ($m_{\tilde{f}}^2$, $A_f$, $M_i$, $\mu$, $B\mu$), \ldots
   %
@@ -183,7 +183,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Precision of fixed-order calculation}
+\begin{frame}{Precision of fixed-order calculation (\texttt{NUHMSSMNoFVHimalaya})}
   Included contributions at fixed loop order:
   \begin{itemize}
   \item[$1\ell$]: full
@@ -194,7 +194,6 @@
   \begin{itemize}
   \item[$2\ell$]: electroweak contributions $g_1^n g_2^m$
   \end{itemize}
-  Model: \texttt{NUHMSSMNoFVHimalaya}
 \end{frame}
 
 % \begin{frame}{Uncertainty estimate of the fixed-order \DRbarp\ calculation}
