--- a/talk.tex
+++ b/talk.tex
@@ -181,19 +181,28 @@
   \end{center}
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Precision of fixed-order calculation (\texttt{NUHMSSMNoFVHimalaya})}
-  Included contributions at fixed loop order:
-  \begin{itemize}
-  \item[$1\ell$]: full
-  \item[$2\ell$]: $g_3^2(y_t^4+y_b^4)+(y_t^2+y_b^2)^3+(y_t^2+y_\tau^2)^3$
-  \item[$3\ell$]: $g_3^4y_t^4$
-  \end{itemize}
-  Missing contributions:
-  \begin{itemize}
-  \item[$2\ell$]: electroweak contributions $g_1^n g_2^m$
-  \end{itemize}
+  \centering
+  \begin{tabular}{llll}
+    \toprule
+               & 1\Loop & 2\Loop & 3\Loop\\
+    \midrule
+    $y_t$      & full & $y_tg_3^4$ & -- \\
+    $y_{b,\tau}$ & full & -- & -- \\
+    $g_3$      & full & $g_3^4$ &  $g_3^6$ \\
+    $g_{1,2}$   & full & -- & -- \\
+    $v$        & full & -- & -- \\
+    \midrule
+    $\beta_{\lambda}$ & full & full & full \\
+    $\beta_{y_t}$    & full & full & full \\
+    $\beta_{g_3}$    & full & full & full \\
+    $\beta_{\cdots}$  & full & full & full \\
+    \midrule
+    $M_h$  & full & $g_3^2(y_t^4+y_b^4)+(y_t^2+y_b^2)^3+(y_t^2+y_\tau^2)^3$ & $g_3^4 y_t^4$ \\
+    \bottomrule
+  \end{tabular}
 \end{frame}
 
 % \begin{frame}{Uncertainty estimate of the fixed-order \DRbarp\ calculation}
