--- a/talk.tex
+++ b/talk.tex
@@ -195,10 +195,10 @@
     $g_{1,2}$   & full & -- & -- \\
     $v$        & full & -- & -- \\
     \midrule
-    $\beta_{\lambda}$ & full & full & full \\
     $\beta_{y_t}$    & full & full & full \\
     $\beta_{g_3}$    & full & full & full \\
-    $\beta_{\cdots}$  & full & full & full \\
+    $\beta_{\ldots}$    & full & full & full \\
+    $\beta_{v_i}$  & full & full & -- \\
     \midrule
     $M_h$  & full & $g_3^2(y_t^4+y_b^4)+(y_t^2+y_b^2)^3+(y_t^2+y_\tau^2)^3$ & $g_3^4 y_t^4$ \\
     \bottomrule
