use hatted symbols

--- a/talk.tex
+++ b/talk.tex
@@ -246,19 +246,19 @@
       \toprule
       & 1\Loop & 2\Loop & 3\Loop & 4\Loop & 5\Loop\\
       \midrule
-      $\lambda$  & full & $(y_t^4+y_b^4)g_3^2+(y_t^4+y_b^4+y_\tau^4)^2$ & $y_t^4g_3^4$ & -- & -- \\
-      $v$        & full & -- & -- & -- & -- \\
-      $y_t$      & full & $y_tg_3^4\textcolor{gray}{\,+\,y_t^3 g_3^2+y_t^5}$ & \textcolor{gray}{$y_tg_3^6$} & $\textcolor{gray}{y_tg_3^8}$ & -- \\
-      $y_{b,\tau}$ & full & -- & -- & -- & -- \\
-      $g_3$      & full & $g_3^4$ &  $g_3^6$ & -- & -- \\
-      $g_{1,2}$   & full & -- & -- & -- & -- \\
+      $\hat\lambda$  & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4+\hat{y}_b^4+\hat{y}_\tau^4)^2$ & $\hat{y}_t^4\hat{g}_3^4$ & -- & -- \\
+      $\hat{v}$        & full & -- & -- & -- & -- \\
+      $\hat{y}_t$      & full & $\hat{y}_t\hat{g}_3^4\textcolor{gray}{\,+\,\hat{y}_t^3 \hat{g}_3^2+\hat{y}_t^5}$ & \textcolor{gray}{$\hat{y}_t\hat{g}_3^6$} & $\textcolor{gray}{\hat{y}_t\hat{g}_3^8}$ & -- \\
+      $\hat{y}_{b,\tau}$ & full & -- & -- & -- & -- \\
+      $\hat{g}_3$      & full & $\hat{g}_3^4$ &  $\hat{g}_3^6$ & -- & -- \\
+      $\hat{g}_{1,2}$   & full & -- & -- & -- & -- \\
       \midrule
-      $\beta_{\lambda}$ & full & full & full & $y_t^4g_3^6$ & -- \\
-      $\beta_{y_t}$    & full & full & full & $y_tg_3^8$ & -- \\
-      $\beta_{g_3}$    & full & full & full & $g_3^{0<n\le 8}$ & $g_3^{10}$ \\
+      $\beta_{\hat\lambda}$ & full & full & full & $\hat{y}_t^4\hat{g}_3^6$ & -- \\
+      $\beta_{\hat{y}_t}$    & full & full & full & $\hat{y}_t\hat{g}_3^8$ & -- \\
+      $\beta_{\hat{g}_3}$    & full & full & full & $\hat{g}_3^{0<n\le 8}$ & $\hat{g}_3^{10}$ \\
       $\beta_{\cdots}$  & full & full & full & -- & -- \\
       \midrule
-      $M_h$           & full & $(y_t^4+y_b^4)g_3^2+(y_t^4 + y_b^4)^2$ & $y_t^4 g_3^4\textcolor{gray}{\,+\,y_t^6g_3^2+y_t^8}$ & \textcolor{gray}{$y_t^4 g_3^6$} & -- \\
+      $M_h$           & full & $(\hat{y}_t^4+\hat{y}_b^4)\hat{g}_3^2+(\hat{y}_t^4 + \hat{y}_b^4)^2$ & $\hat{y}_t^4 \hat{g}_3^4\textcolor{gray}{\,+\,\hat{y}_t^6\hat{g}_3^2+\hat{y}_t^8}$ & \textcolor{gray}{$\hat{y}_t^4 \hat{g}_3^6$} & -- \\
       \bottomrule
     \end{tabular}
   \end{center}
