--- a/talk.tex
+++ b/talk.tex
@@ -14,7 +14,7 @@
 \tikzstyle{arrow} = [draw, -latex, thick]
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
-\usepgfplotslibrary{fillbetween}
+\usepgfplotslibrary{fillbetween,groupplots}
 % \usepackage{multirow}
 \usepackage{tcolorbox}
 \usepackage{pifont}
@@ -291,10 +291,12 @@
 \begin{frame}{Uncertainty estimate of the EFT calculation}
   \begin{center}
     \begin{tikzpicture}
-      \begin{semilogxaxis}[
+      \begin{axis}[
         title={$\tan\beta=20$, $x_t=-\sqrt{6}$},
         xlabel={$\MS$ / GeV},
         ylabel={$M_h$ / GeV},
+        xmode=log,
+        log basis x=10,
         xmin=200, xmax=10000,
         ymin=100, ymax=130,
         ytick distance=5,
@@ -304,7 +306,7 @@
         \addplot[name path=upper,draw=none] table[x index=0, y expr=\thisrowno{1}+\thisrowno{2}] {data/HSSUSY_MS-Mh-DMh_TB-20_xt--2.44949.dat};
         \addplot[name path=lower,draw=none] table[x index=0, y expr=\thisrowno{1}-\thisrowno{2}] {data/HSSUSY_MS-Mh-DMh_TB-20_xt--2.44949.dat};
         \addplot[red!30,fill opacity=0.5] fill between[of=upper and lower];
-      \end{semilogxaxis}
+      \end{axis}
     \end{tikzpicture}
   \end{center}
 \end{frame}
